--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -18,7 +18,7 @@
       <ion-item 
       href="#/tab/list/{{item.shortname}}" 
       class="item-thumbnail-left" 
-      ng-repeat="item in rooms | filter:search">
+      ng-repeat="item in saloons | filter:search">
         <img ng-src="img/{{item.shortname}}.jpg" alt="">
         <h2>{{item.name}}</h2>
         <h3>{{item.price}} kr/h</h3>
